syntax="proto3";
option go_package="github.com/MaoScut/bbs";

message CreateUserRequest {
  string email = 1;
  string user_name = 2;
  string password = 3;
}

message User {
  string email = 1;
  string user_name = 2;
}

message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string email  = 1;
  string password  = 2;
}

message LoginResponse {}

message LogoutRequest {}

message LogoutResponse {}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}
